feat: enable cdn

--- a/.gitignore
+++ b/.gitignore
@@ -35,16 +35,9 @@ charts/**/.tgz
 app-chart
 app-chart/**
 
-# Secrets / Env
-.env
-.env.*
-!.env.example    # keep template/example file tracked
+# Secrets
 **/secrets*
 
 # Logs
 *.log
 logs/
-
-# App specific
-css/
-js/
